syntax = "proto3";

option go_package = "../grpc";

// The greeting service definition.
service User {
  // Sends a greeting
  rpc GetUser (UserRequest) returns (UserReply) {}
}

// The request message containing the user's name.
message UserRequest {
  string id = 1;
}

// The response message containing the greetings
message UserReply {
  string id       = 1;
  string name     = 2;
  string email    = 3;
  string username = 4;
  string password = 5;
  string dob      = 6;
}